fix vertical scrollbar for command preview

--- a/src/renderer/containers/EntityResolverScreen/Resolutions.scss
+++ b/src/renderer/containers/EntityResolverScreen/Resolutions.scss
@@ -56,7 +56,7 @@ $color-lighten-2: rgba(255, 255, 255, 1);
   &__summary {
     &--is-open {
       & > td {
-        background-color: var(--color-cyber-grape) !important;
+        background-color: var(--color-cyber-grape) !important; // sass-lint:disable-line no-important
         color: var(--color-white);
       }
     }
@@ -167,6 +167,7 @@ $color-lighten-2: rgba(255, 255, 255, 1);
       width: 100%;
       height: 100%;
       overflow-x: auto;
+      overflow-y: hidden;
     }
 
     code {
